samples/_failures_safe/1761486961_9b0b9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ee3f01e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_9ee3f01e.c:163:17: error: expected declaration or statement at end of input
  163 |                 col++;
      |                 ^~~
./samples/SAFE/__tmp_9ee3f01e.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ee3f01e.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ee3f01e.c:163:17: error: expected declaration or statement at end of input
